Palantir formatting